--- a/package.json
+++ b/package.json
@@ -23,13 +23,21 @@
   },
   "homepage": "https://github.com/YvesHarrison/Market-IT#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "expression": "0.0.1",
     "mongodb": "^3.1.8",
+    "mongoose": "^5.3.14",
+    "mongoose-unique-validator": "^2.0.2",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "uuid": "^3.3.2"
   }
 }
