--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/YvesHarrison/Market-IT#readme",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
@@ -32,6 +33,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "expression": "0.0.1",
+    "method-override": "^3.0.0",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.14",
     "mongoose-unique-validator": "^2.0.2",
