--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.2",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -33,11 +33,14 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "expression": "0.0.1",
+    "handlebars": "^4.0.12",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.3.14",
+    "mongoose": "^5.3.15",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
+    "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "uuid": "^3.3.2"
