--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   }
 }
