--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^5.3.15",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
