--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-uuid": "^1.4.8",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.2.0",
