--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer": "^1.4.1",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2",
